# slurm-emission

./: .gitignore  README.md  example_1.py  example_2.py  pyproject.toml  setup.py  submit_jobs.py
examples/: example_1.py  example_2.py
src/slurm_emission/: __init__.py  submit_jobs.py
